# barrier-free

./: README.md  docker-compose.yaml
.github/workflows/: deploy.yaml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_migration.py  0002_add_users_table.py  0003_add_node_comments_table.py  0004_add_nodes_table.py  0005_add_node_accessability_propositions_.py
backend/src/api/: main.py  middlewares.py  settings.py  state.py
backend/src/api/common/: authentication.py
backend/src/api/db/: utils.py
backend/src/api/db/tables/: __init__.py  base.py  core.py  users.py
backend/src/api/routes/: __init__.py
backend/src/api/routes/auth/: routes.py  schemas.py  services.py
backend/src/api/routes/core/: routes.py  schemas.py  services.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: _variables.scss  main.scss
frontend/src/components/: Map.vue  PopupContent.vue  Sidebar.vue  SignInForm.vue  SignUpForm.vue  UserProfile.vue
frontend/src/components/node/: NodeModal.vue
frontend/src/config/: index.js
frontend/src/plugins/: osmap-plugin.js
frontend/src/stores/: auth.js  comments.js  nodes.js  search.js  wheelmap.js
frontend/src/utils/: event-emitter.js  icons.js  map.js  markers-mapper.js
frontend/src/views/: HomeView.vue
